# phone32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
components/graphics/: CMakeLists.txt  app.c  app.h  app_manager.c  app_manager.h  conf.c  conf.h  drivers.c  drivers.h  graphics.c  graphics.h  lvglport.c  lvglport.h  screens.c  screens.h  settings.c  settings.h
components/graphics/apps/: 2048_app.c  apps.h  background_app.c  phone_app.c  suspend_app.c  test_app.c
components/graphics/fonts/: impact_60.c
components/graphics/images/: chicken_jockey.c
components/voip/: CMakeLists.txt  Kconfig.projbuild  md5_digest.c  md5_digest.h  ping_init.h  rtp.c  rtp.h  voip.c  voip.h
components/waveshare-lcd-screen/: CMakeLists.txt  Kconfig.projbuild  README.md  lvgl_port.h  waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
phone32/: .gitignore  CMakeLists.txt
phone32/.cache/clangd/index/: phone32.c.A5E030EEB5D961E8.idx
phone32/components/graphics/: CMakeLists.txt  graphics.c  graphics.h
phone32/components/voip/: .CMakeLists.txt.swp  .main.c.swp  .secrets  .voip.c.swp  CMakeLists.txt  Kconfig.projbuild  ping_init.c  voip.c  voip.h
phone32/main/: .main.c.swp  CMakeLists.txt  main.c  phone32.c
